# telegram_antifraud

./: .env  .env.example  .gitattributes  .gitignore  ANTIFRAUD_INTEGRATION.txt  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COPYING  COPYRIGHT.md  Dockerfile  GITHUB_DEPLOYMENT.md  LICENSE  README.md  SUPPORT.md  config.py  demo.py  docker-compose.full.yml  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  requirements.txt  rules.json  tests.py  verify-metadata.sh
.github/: dependabot.yml
api/: app.py  dashboard.py
bots/: private_bot.py  public_bot.py  userbot.py  webhook.py
data/: store.json
db/: models.py
docs/: MODERATION_POLICY.md  OPERATIONS_MANUAL.md  PRIVACY_POLICY.md  SCALABILITY.md  SECURITY_POLICY.md  SOC2_COMPLIANCE_ROADMAP.md  TOS_CHECKLIST.md  WEBHOOK_DEPLOYMENT.md
engine/: __init__.py  ab_testing.py  clusters.py  heuristics.py  honeypot.py  logger.py  raid.py  risk_assessment.py  rules.py  scoring.py  shadow_mod.py  signals.py  text_normalization.py  worker.py
examples/: logging.py  metrics.py
frontend/: package.json
k8s/: README.md  hpa.yaml  ingress.yaml  postgres-deployment.yaml  redis-statefulset.yaml  webhook-deployment.yaml  worker-deployment.yaml
monitoring/: alert-rules.yml  alertmanager.yml  grafana-dashboard-antifraud.json  prometheus.yml
scripts/: setup_webhook.sh
services/: __init__.py  ban_manager.py  correlator.py  db.py  memory.py  strike_manager.py  user_history.py
tests/: test_advanced.py  test_clusters.py  test_raid.py  test_scoring.py  test_webhook.py
tools/: backup.py  load_test.py  (+5 more)
(+17 files in other folders)
