[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-antifraud"
version = "0.1.0"
description = "Production-ready Telegram anti-fraud system for spam, raids, and scams detection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "hasbulla", email = "hasbullita007@gmail.com"}
]
keywords = ["telegram", "antifraud", "moderation", "security", "spam", "raid"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Internet",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/DonGerte/telegram_antifraud"
Repository = "https://github.com/DonGerte/telegram_antifraud.git"
Issues = "https://github.com/DonGerte/telegram_antifraud/issues"
Discussions = "https://github.com/DonGerte/telegram_antifraud/discussions"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
